deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appcat-user
  labels:
    app: appcat-user
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: appcat-user
  type: ClusterIP
