deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: appcat-user
spec:
  rules:
    - host: docs.appcat.ch
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: appcat-user
                port:
                  number: 8080
  tls:
    - hosts:
        - docs.appcat.ch
      secretName: appcat-user-cert
